--- a/sandu.css
+++ b/sandu.css
@@ -1,5 +1,19 @@
-img{
-width: 700px;
-margin-left: 600px;
+img{ align-items: var(img .imgg);
+width: 600px; 
+margin-left: 100px;
+
 
 }
+table{letter-spacing: 4px;
+
+
+
+}
+body{background-color: #FAEBD7;
+color: black;
+font-size: medium ;
+text-align: center;}
+
+.MD{text-align-last: center;
+}
+
