--- a/sandu.css
+++ b/sandu.css
@@ -17,3 +17,7 @@ text-align: center;}
 .MD{text-align-last: center;
 }
 
+a{  text-decoration: no;
+color: rgb(72, 17, 161);}
+
+.his{font-size: xx-large; }
